--- a/src/main/resources/Form/style.css
+++ b/src/main/resources/Form/style.css
@@ -12,3 +12,7 @@
 .cardPane{
     -fx-border-radius: 8px;
 }
+.tpMain{
+    -fx-background-image: url("Photo/656670.jpg");
+    -fx-background-size: cover;
+}
