--- a/src/main/resources/Form/MainForm/ProductSaleStatictis.fxml
+++ b/src/main/resources/Form/MainForm/ProductSaleStatictis.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="711.0" prefWidth="817.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="711.0" prefWidth="817.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ProductSaleStatictisController">
    <top>
       <AnchorPane prefHeight="63.0" prefWidth="817.0" BorderPane.alignment="CENTER">
          <children>
