--- a/src/main/resources/Form/MainForm/UnitAdd.fxml
+++ b/src/main/resources/Form/MainForm/UnitAdd.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 
-<AnchorPane prefHeight="363.0" prefWidth="395.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Form.MainForm.UnitAdd">
+<AnchorPane prefHeight="363.0" prefWidth="395.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.UnitAddController">
    <children>
       <GridPane layoutX="14.0" layoutY="14.0" prefHeight="312.0" prefWidth="420.0">
         <columnConstraints>
