fix some class and add some class

--- a/src/main/resources/Form/style.css
+++ b/src/main/resources/Form/style.css
@@ -16,3 +16,6 @@
     -fx-background-image: url("Photo/656670.jpg");
     -fx-background-size: cover;
 }
+.transparentBtn{
+    -fx-background-color: transparent;
+}
