--- a/src/main/resources/Form/Module2/PurchaseOrder.fxml
+++ b/src/main/resources/Form/Module2/PurchaseOrder.fxml
@@ -1,28 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.module2.PurchaseOrderController">
 
-  <columnConstraints>
-    <ColumnConstraints />
-    <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="275.0" minWidth="10.0" prefWidth="87.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="573.0" minWidth="10.0" prefWidth="363.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.module2.PurchaseOrderController">
    <children>
-      <Label alignment="TOP_LEFT" text="Product: " GridPane.columnIndex="1" />
-      <ChoiceBox prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" />
-      <Label text="Amount:" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <TextField maxWidth="162.0" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+      <AnchorPane prefHeight="54.0" prefWidth="450.0">
+         <children>
+            <Label layoutX="43.0" layoutY="19.0" prefHeight="16.0" prefWidth="153.0" text="**Prompt text**" />
+         </children>
+      </AnchorPane>
+      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="450.0">
+      
+        <columnConstraints>
+          <ColumnConstraints />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="275.0" minWidth="10.0" prefWidth="102.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="573.0" minWidth="10.0" prefWidth="348.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="70.0" minHeight="0.0" prefHeight="70.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="139.0" minHeight="0.0" prefHeight="68.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="212.0" minHeight="0.0" prefHeight="43.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="48.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="33.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="48.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="258.0" valignment="TOP" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label alignment="TOP_LEFT" text="Product: " GridPane.columnIndex="1" />
+            <ChoiceBox fx:id="productChoiceBox" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" />
+            <Label text="Amount: " GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="amountTextField" maxWidth="162.0" onMouseExited="#checkAmount" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Label text="Customer: " GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <ChoiceBox fx:id="customerChoiceBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <CheckBox fx:id="customerCheckBox" mnemonicParsing="false" text="New customer" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Label fx:id="nameLabel" disable="true" text="Name: " GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label fx:id="phoneLabel" disable="true" text="Phone: " GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <CheckBox fx:id="paidCheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="161.0" text="Paid" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <Button fx:id="okBtn" mnemonicParsing="false" onAction="#makeOrder" prefHeight="36.0" prefWidth="172.0" text="MAKE AN ORDER" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+            <TextField fx:id="customerNameField" disable="true" maxWidth="-Infinity" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <TextField fx:id="phoneTextField" disable="true" maxWidth="-Infinity" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+         </children>
+      </GridPane>
    </children>
-</GridPane>
+</VBox>
