--- a/src/main/resources/Form/Module2/PurchaseOrder.fxml
+++ b/src/main/resources/Form/Module2/PurchaseOrder.fxml
@@ -4,14 +4,14 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-
 
 <VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.module2.PurchaseOrderController">
    <children>
@@ -20,20 +20,22 @@
             <Label layoutX="43.0" layoutY="19.0" prefHeight="16.0" prefWidth="153.0" text="**Prompt text**" />
          </children>
       </AnchorPane>
-      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="450.0">
+      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="450.0">
       
         <columnConstraints>
           <ColumnConstraints />
-          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="275.0" minWidth="10.0" prefWidth="102.0" />
-            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="573.0" minWidth="10.0" prefWidth="348.0" />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="275.0" minWidth="10.0" prefWidth="83.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="573.0" minWidth="10.0" prefWidth="250.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="573.0" minWidth="10.0" prefWidth="117.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="70.0" minHeight="0.0" prefHeight="70.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="70.0" valignment="TOP" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="37.0" valignment="TOP" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="112.0" minHeight="10.0" prefHeight="103.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="42.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="42.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="141.0" minHeight="10.0" prefHeight="107.0" valignment="TOP" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="112.0" minHeight="10.0" prefHeight="39.0" valignment="TOP" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="139.0" minHeight="0.0" prefHeight="49.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="212.0" minHeight="0.0" prefHeight="40.0" valignment="TOP" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="420.0" minHeight="10.0" prefHeight="36.0" valignment="TOP" vgrow="SOMETIMES" />
@@ -44,24 +46,32 @@
          <children>
             <Label alignment="TOP_LEFT" text="Product: " GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ChoiceBox fx:id="productChoiceBox" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label text="Amount: " GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="amountTextField" maxWidth="162.0" onMouseExited="#checkAmount" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Label text="Customer: " GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <ChoiceBox fx:id="customerChoiceBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-            <CheckBox fx:id="customerCheckBox" mnemonicParsing="false" text="New customer" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-            <Label fx:id="nameLabel" disable="true" text="Name: " GridPane.columnIndex="1" GridPane.rowIndex="8" />
-            <Label fx:id="phoneLabel" disable="true" text="Phone: " GridPane.columnIndex="1" GridPane.rowIndex="9" />
-            <CheckBox fx:id="paidCheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="161.0" text="Paid" GridPane.columnIndex="2" GridPane.rowIndex="10" />
-            <Button fx:id="okBtn" mnemonicParsing="false" onAction="#makeOrder" prefHeight="36.0" prefWidth="172.0" text="MAKE AN ORDER" GridPane.columnIndex="2" GridPane.rowIndex="11" />
-            <TextField fx:id="customerNameField" disable="true" maxWidth="-Infinity" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="8" />
-            <TextField fx:id="phoneTextField" disable="true" maxWidth="-Infinity" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="9" />
-            <Button mnemonicParsing="false" onAction="#addToOrder" text="Add to Order" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-            <ListView fx:id="orderListView" prefHeight="97.0" prefWidth="348.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-            <Label text="Order: " GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label fx:id="quantityLabel" text="Quantity" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="quantityTextField" maxWidth="162.0" onMouseExited="#checkAmount" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Label text="Customer: " GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <ChoiceBox fx:id="customerChoiceBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+            <CheckBox fx:id="customerCheckBox" mnemonicParsing="false" text="New customer" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+            <Label fx:id="nameLabel" disable="true" text="Name: " GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <Label fx:id="phoneLabel" disable="true" text="Phone: " GridPane.columnIndex="1" GridPane.rowIndex="10" />
+            <CheckBox fx:id="paidCheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="161.0" text="Paid" GridPane.columnIndex="2" GridPane.rowIndex="11" />
+            <Button fx:id="okBtn" mnemonicParsing="false" onAction="#generateBtn" prefHeight="36.0" prefWidth="172.0" text="GENERATE" GridPane.columnIndex="2" GridPane.rowIndex="12" />
+            <TextField fx:id="customerNameField" disable="true" maxWidth="-Infinity" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="9" />
+            <TextField fx:id="phoneTextField" disable="true" maxWidth="-Infinity" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="10" />
+            <Button fx:id="addToItemsBtn" mnemonicParsing="false" onAction="#addToItems" text="Add to Items" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <Label text="Items: " GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <ChoiceBox prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" />
             <Label text="Salesman: " GridPane.columnIndex="1" />
             <Label text="Lack: " GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField maxWidth="-Infinity" prefWidth="50.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5">
+              <columns>
+                <TableColumn prefWidth="51.0" text="QTY." />
+                <TableColumn prefWidth="114.0" text="NAME" />
+                  <TableColumn prefWidth="84.0" text="PRICE" />
+                  <TableColumn prefWidth="100.0" text="TOTAL" />
+              </columns>
+            </TableView>
+            <Label text="Total: 0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
          </children>
       </GridPane>
    </children>
