--- a/src/main/resources/Form/Module2/PurchaseOrder.fxml
+++ b/src/main/resources/Form/Module2/PurchaseOrder.fxml
@@ -47,7 +47,7 @@
             <Label alignment="TOP_LEFT" text="Product: " GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ChoiceBox fx:id="productChoiceBox" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <Label fx:id="quantityLabel" text="Quantity" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="quantityTextField" maxWidth="162.0" onMouseExited="#checkAmount" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <TextField fx:id="quantityTextField" maxWidth="162.0" prefHeight="26.0" prefWidth="162.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <Label text="Customer: " GridPane.columnIndex="1" GridPane.rowIndex="7" />
             <ChoiceBox fx:id="customerChoiceBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
             <CheckBox fx:id="customerCheckBox" mnemonicParsing="false" text="New customer" GridPane.columnIndex="2" GridPane.rowIndex="8" />
