--- a/src/main/resources/Form/Module2/DiscountPane.fxml
+++ b/src/main/resources/Form/Module2/DiscountPane.fxml
@@ -26,9 +26,10 @@
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3">
          <children>
-            <Button fx:id="searchBtn" layoutX="240.0" layoutY="49.0" mnemonicParsing="false" text="SEARCH" />
+            <Button fx:id="searchBtn" layoutX="240.0" layoutY="49.0" mnemonicParsing="false" onAction="#searchByName" text="SEARCH" />
             <TextField fx:id="searchField" layoutX="69.0" layoutY="49.0" maxWidth="164.0" prefHeight="26.0" prefWidth="164.0" />
-            <Label fx:id="promptText" layoutX="388.0" layoutY="54.0" text="*discount pane*" />
+            <Label fx:id="promptText" layoutX="394.0" layoutY="54.0" text="*discount pane*" />
+            <Button fx:id="addBtn" layoutX="319.0" layoutY="49.0" mnemonicParsing="false" onAction="#addDiscount" text="ADD" />
          </children>
       </AnchorPane>
       <Pagination fx:id="pag" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="1" GridPane.rowSpan="2" />
