--- a/src/main/resources/Form/Module2/AddCustomerToDiscount.fxml
+++ b/src/main/resources/Form/Module2/AddCustomerToDiscount.fxml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Controller.module2.AddCustomerToDiscountController"
-            prefHeight="400.0" prefWidth="600.0">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
 
-</AnchorPane>
+fx:controller="Controller.module2.AddCustomerToDiscountController">
+  <columnConstraints>
+    <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="268.0" minWidth="10.0" prefWidth="202.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="222.0" minWidth="10.0" prefWidth="222.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints maxHeight="127.0" minHeight="10.0" prefHeight="98.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="281.0" minHeight="10.0" prefHeight="88.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="212.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="212.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
+  </rowConstraints>
+   <children>
+      <Label text="Customer:" GridPane.rowIndex="1" />
+      <Button fx:id="okBtn" mnemonicParsing="false" onAction="#giveDiscount" text="Give Discount" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <ChoiceBox fx:id="customerChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3">
+         <children>
+            <Label fx:id="promptLabel" layoutX="38.0" layoutY="65.0" text="Choose the qualified customers below to give them the discount:" />
+         </children>
+      </AnchorPane>
+   </children>
+</GridPane>
