add the calculate-debt&totalSpent funcs

--- a/src/main/resources/Form/Module2/PurchaseOrder.fxml
+++ b/src/main/resources/Form/Module2/PurchaseOrder.fxml
@@ -17,7 +17,7 @@
    <children>
       <AnchorPane prefHeight="54.0" prefWidth="450.0">
          <children>
-            <Label layoutX="43.0" layoutY="19.0" prefHeight="16.0" prefWidth="153.0" text="**Prompt text**" />
+            <Label fx:id="promtText" layoutX="43.0" layoutY="19.0" prefHeight="16.0" prefWidth="153.0" text="**Prompt text**" />
          </children>
       </AnchorPane>
       <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="450.0">
