--- a/src/main/resources/Form/StatisticModule/SalesStatistic.fxml
+++ b/src/main/resources/Form/StatisticModule/SalesStatistic.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -10,7 +13,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="521.0" prefWidth="826.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.StatisticModule.SalesStatisticController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="521.0" prefWidth="1032.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.StatisticModule.SalesStatisticController">
     <top>
         <BorderPane prefHeight="114.0" prefWidth="826.0" BorderPane.alignment="CENTER">
             <bottom>
@@ -52,13 +55,12 @@
         </BorderPane>
     </top>
     <center>
-        <TableView fx:id="tbSalesmanList" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <TableView fx:id="tbSalesmanList" prefHeight="358.0" prefWidth="632.0" BorderPane.alignment="CENTER">
             <columns>
                 <TableColumn fx:id="clSalesmanID" prefWidth="75.0" text="Salesman ID" />
                 <TableColumn fx:id="clSalesmanName" prefWidth="189.0" text="Salesman Name" />
                 <TableColumn fx:id="clInvoiceAmount" prefWidth="131.0" text="Amount of Invoice" />
                 <TableColumn fx:id="clTotalSpent" prefWidth="173.0" text="Sales" />
-                <TableColumn fx:id="clShowDetail" prefWidth="257.0" text="Show Detail" />
             </columns>
         </TableView>
     </center>
@@ -69,4 +71,14 @@
             </top>
         </BorderPane>
     </bottom>
+   <right>
+      <BarChart fx:id="bcSaleStatis" BorderPane.alignment="CENTER">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </BarChart>
+   </right>
 </BorderPane>
