--- a/src/main/resources/Form/Module2/addDiscount.fxml
+++ b/src/main/resources/Form/Module2/addDiscount.fxml
@@ -27,7 +27,7 @@
    <children>
       <Label text="Name:" GridPane.rowIndex="1" />
       <Label text="Limit: " GridPane.rowIndex="2" />
-      <Label text="Discount Percentage: " GridPane.rowIndex="3" />
+      <Label text="Discount: " GridPane.rowIndex="3" />
       <Label text="Start Date:" GridPane.rowIndex="4" />
       <Label text="End Date:" GridPane.rowIndex="5" />
       <Button fx:id="okBtn" mnemonicParsing="false" onAction="#addDiscount" text="ADD NEW TRADE DISCOUNT" GridPane.columnIndex="1" GridPane.rowIndex="6" />
