--- a/src/main/resources/Form/SalesmanModule/CustomerSalerList.fxml
+++ b/src/main/resources/Form/SalesmanModule/CustomerSalerList.fxml
@@ -3,8 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Pagination?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -103,18 +101,8 @@
     </center>
     <bottom>
         <BorderPane prefHeight="406.0" prefWidth="779.0" BorderPane.alignment="CENTER">
-            <bottom>
-                <Pagination fx:id="pgPage" prefHeight="41.0" prefWidth="779.0" BorderPane.alignment="CENTER" />
-            </bottom>
          <center>
-            <TableView fx:id="tbCusInfo" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-              <columns>
-                <TableColumn fx:id="clCusID" prefWidth="93.0" text="Customer ID" />
-                <TableColumn fx:id="clCusName" prefWidth="135.0" text="Customer Name" />
-                  <TableColumn fx:id="clCusPhone" prefWidth="131.0" text="Customer Phone" />
-                  <TableColumn fx:id="clCusAddress" prefWidth="419.0" text="Customer  Address" />
-              </columns>
-            </TableView>
+            <Pagination fx:id="pgCustomerList" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
          </center>
         </BorderPane>
     </bottom>
