--- a/src/main/resources/Form/SalesmanModule/ReceiptByType.fxml
+++ b/src/main/resources/Form/SalesmanModule/ReceiptByType.fxml
@@ -2,11 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Pagination?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -143,23 +142,6 @@
    </center>
    <bottom>
       <BorderPane prefHeight="325.0" prefWidth="805.0" BorderPane.alignment="CENTER">
-         <center>
-            <TableView fx:id="tbDetailOrderList" prefHeight="195.0" prefWidth="805.0" BorderPane.alignment="CENTER">
-              <columns>
-                <TableColumn fx:id="clID" prefWidth="29.0" text="ID" />
-                <TableColumn fx:id="clDate" prefWidth="104.0" text="Date" />
-                  <TableColumn fx:id="clPaidStatus" prefWidth="75.0" text="Paid Status" />
-                  <TableColumn fx:id="clCusID" prefWidth="75.0" text="Customer ID" />
-                  <TableColumn fx:id="clCusName" prefWidth="180.0" text="Customer Name" />
-                  <TableColumn fx:id="clDebt" prefWidth="117.0" text="Debt" />
-                  <TableColumn fx:id="clTotal" prefWidth="110.0" text="Total" />
-                  <TableColumn prefWidth="114.0" text="Function" />
-              </columns>
-            </TableView>
-         </center>
-         <bottom>
-            <Pagination prefHeight="48.0" prefWidth="805.0" BorderPane.alignment="CENTER" />
-         </bottom>
          <top>
             <HBox prefHeight="37.0" prefWidth="805.0" BorderPane.alignment="CENTER">
                <children>
@@ -178,9 +160,22 @@
                         <Insets left="20.0" />
                      </HBox.margin>
                   </Button>
+                  <ComboBox fx:id="cbStatus" prefWidth="150.0">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </ComboBox>
+                  <Button mnemonicParsing="false" onAction="#searchByStatus" text="Search By Status">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Button>
                </children>
             </HBox>
-         </top></BorderPane>
+         </top>
+         <center>
+            <Pagination fx:id="pgReceiptList" prefHeight="295.0" prefWidth="805.0" BorderPane.alignment="CENTER" />
+         </center></BorderPane>
    </bottom>
    <right>
       <AnchorPane prefHeight="388.0" prefWidth="77.0" BorderPane.alignment="CENTER" />
