--- a/src/main/resources/Form/StatisticModule/ProductSoldStatistic.fxml
+++ b/src/main/resources/Form/StatisticModule/ProductSoldStatistic.fxml
@@ -8,8 +8,6 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Pagination?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
@@ -54,22 +52,6 @@
          </bottom>
         </BorderPane>
     </top>
-    <center>
-        <TableView fx:id="tbProductList" prefHeight="358.0" prefWidth="1025.0" BorderPane.alignment="CENTER">
-            <columns>
-                <TableColumn fx:id="clProductID" prefWidth="75.0" text="Product ID" />
-                <TableColumn fx:id="clProductName" prefWidth="255.0" text="Product Name" />
-                <TableColumn fx:id="clTotalSold" prefWidth="153.0" text="Total Product Sold" />
-            </columns>
-        </TableView>
-    </center>
-    <bottom>
-        <BorderPane prefHeight="49.0" prefWidth="826.0" BorderPane.alignment="CENTER">
-            <top>
-                <Pagination prefHeight="32.0" prefWidth="826.0" BorderPane.alignment="CENTER" />
-            </top>
-        </BorderPane>
-    </bottom>
     <right>
         <BarChart fx:id="bcProductSold" prefHeight="358.0" prefWidth="547.0" BorderPane.alignment="CENTER">
             <xAxis>
@@ -80,4 +62,7 @@
             </yAxis>
         </BarChart>
     </right>
+   <left>
+      <Pagination fx:id="pgProductSold" prefHeight="358.0" prefWidth="491.0" BorderPane.alignment="CENTER" />
+   </left>
 </BorderPane>
