--- a/src/main/resources/Form/StatisticModule/TradeDiscountStatistic.fxml
+++ b/src/main/resources/Form/StatisticModule/TradeDiscountStatistic.fxml
@@ -6,32 +6,11 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Pagination?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="521.0" prefWidth="1106.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.StatisticModule.TradeDiscountStatisticController">
-    <center>
-        <TableView fx:id="tbTradeDiscountList" prefHeight="472.0" prefWidth="560.0" BorderPane.alignment="CENTER">
-            <columns>
-                <TableColumn fx:id="clID" prefWidth="50.0" text="TD ID" />
-                <TableColumn fx:id="clName" prefWidth="156.0" text="Trade Discount Name" />
-                <TableColumn fx:id="clStartDate" prefWidth="102.0" text="Start Date" />
-            <TableColumn fx:id="clEndDate" prefWidth="110.0" text="End Date" />
-            <TableColumn fx:id="clCustomerAmount" prefWidth="129.0" text="Customer Amount" />
-            <TableColumn fx:id="clTotalPayment" prefWidth="107.0" text=" Total Payment" />
-            </columns>
-        </TableView>
-    </center>
-    <bottom>
-        <BorderPane prefHeight="49.0" prefWidth="826.0" BorderPane.alignment="CENTER">
-            <top>
-                <Pagination prefHeight="32.0" prefWidth="826.0" BorderPane.alignment="CENTER" />
-            </top>
-        </BorderPane>
-    </bottom>
     <right>
         <BarChart fx:id="bcTradeDiscount" prefHeight="472.0" prefWidth="452.0" BorderPane.alignment="CENTER">
             <xAxis>
@@ -58,4 +37,7 @@
          </children>
       </HBox>
    </top>
+   <left>
+      <Pagination fx:id="pgTradeDiscountStat" prefHeight="422.0" prefWidth="652.0" BorderPane.alignment="CENTER" />
+   </left>
 </BorderPane>
