--- a/src/main/resources/Form/SalesmanModule/CommissionSummary.fxml
+++ b/src/main/resources/Form/SalesmanModule/CommissionSummary.fxml
@@ -15,24 +15,30 @@
          <children>
             <Label layoutX="29.0" layoutY="14.0" prefHeight="21.0" prefWidth="102.0" text="Seller Name:">
                <font>
-                  <Font size="15.0" />
+                  <Font name="System Bold" size="15.0" />
                </font>
             </Label>
             <TextField fx:id="tfSellerName" editable="false" layoutX="142.0" layoutY="10.0" prefHeight="25.0" prefWidth="195.0" />
             <Label layoutX="15.0" layoutY="77.0" prefHeight="21.0" prefWidth="68.0" text="Start day:">
                <font>
-                  <Font size="15.0" />
+                  <Font name="System Bold" size="15.0" />
                </font>
             </Label>
             <DatePicker fx:id="dpStartDay" layoutX="88.0" layoutY="75.0" />
             <Label layoutX="274.0" layoutY="77.0" text="End day:">
                <font>
-                  <Font size="15.0" />
+                  <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <DatePicker fx:id="dpEndDay" layoutX="330.0" layoutY="73.0" />
-            <Button layoutX="513.0" layoutY="73.0" mnemonicParsing="false" onAction="#searchCommissionByDate" text="Search" />
-            <Button layoutX="576.0" layoutY="73.0" mnemonicParsing="false" onAction="#showAllCommission" text="Show All" />
+            <DatePicker fx:id="dpEndDay" layoutX="337.0" layoutY="75.0" />
+            <Button layoutX="524.0" layoutY="75.0" mnemonicParsing="false" onAction="#searchCommissionByDate" text="Search">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button layoutX="590.0" layoutY="75.0" mnemonicParsing="false" onAction="#showAllCommission" text="Show All">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
          </children>
       </AnchorPane>
    </top>
