--- a/src/main/resources/Form/SalesmanModule/CreateOrder.fxml
+++ b/src/main/resources/Form/SalesmanModule/CreateOrder.fxml
@@ -103,6 +103,26 @@
                         </ImageView>
                      </graphic>
                   </Button>
+                  <Label text="Type of Search: ">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+                  <ComboBox fx:id="cbSearchType" prefWidth="150.0" promptText="Select Type">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </ComboBox>
+                  <TextField fx:id="tfSearchCustomer">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Button mnemonicParsing="false" onAction="#searchCustomer" text="Search Customer">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Button>
                </children>
             </HBox>
          </top>
@@ -113,13 +133,14 @@
          <children>
             <Button layoutX="39.0" layoutY="320.0" mnemonicParsing="false" onAction="#saveOrder" prefHeight="47.0" prefWidth="59.0" text="Save" />
             <Button layoutX="118.0" layoutY="342.0" mnemonicParsing="false" onAction="#clearInfo" text="clear" />
-            <Label layoutX="14.0" layoutY="23.0" text="Total Cost:" />
-            <TextField fx:id="tfTotalCost" editable="false" layoutX="14.0" layoutY="48.0" />
-            <Label layoutX="14.0" layoutY="89.0" text="Paid:" />
-            <TextField fx:id="tfPaid" layoutX="14.0" layoutY="116.0" />
-            <Button layoutX="14.0" layoutY="233.0" mnemonicParsing="false" onAction="#openAddProduct" text="Add Product" />
-            <Label layoutX="13.0" layoutY="150.0" text="Change:" />
-            <TextField fx:id="tfChange" layoutX="13.0" layoutY="175.0" />
+            <Label layoutX="11.0" layoutY="76.0" text="Total Cost:" />
+            <TextField fx:id="tfTotalCost" editable="false" layoutX="10.0" layoutY="93.0" />
+            <Label layoutX="14.0" layoutY="134.0" text="Paid:" />
+            <TextField fx:id="tfPaid" layoutX="10.0" layoutY="151.0" />
+            <Label layoutX="11.0" layoutY="193.0" text="Change:" />
+            <TextField fx:id="tfChange" layoutX="10.0" layoutY="210.0" />
+            <Label layoutX="12.0" layoutY="14.0" text="Voucher Code:" />
+            <TextField fx:id="tfVoucherCode" layoutX="10.0" layoutY="31.0" onInputMethodTextChanged="#searchVoucher" />
          </children>
       </AnchorPane>
    </right>
