--- a/src/main/resources/Form/SalesmanModule/PaymentManage.fxml
+++ b/src/main/resources/Form/SalesmanModule/PaymentManage.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="524.0" prefWidth="759.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SalesManageModule.PaymentManageController">
     <top>
@@ -20,7 +21,10 @@
                                 <Image url="@../../Photo/save.png" />
                             </image>
                         </ImageView>
-                    </graphic></Button>
+                    </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
                 <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="60.0" prefWidth="52.0" text="New">
                     <graphic>
                         <ImageView fitHeight="22.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
@@ -28,7 +32,10 @@
                                 <Image url="@../../Photo/add-icon--ikons-icons--softiconsm-5.png" />
                             </image>
                         </ImageView>
-                    </graphic></Button>
+                    </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
                 <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="65.0" prefWidth="51.0" text="Edit">
                     <graphic>
                         <ImageView fitHeight="36.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
@@ -36,23 +43,32 @@
                                 <Image url="@../../Photo/create-new--v1.png" />
                             </image>
                         </ImageView>
-                    </graphic></Button>
-                <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="57.0" prefWidth="52.0" text="Delete">
+                    </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="56.0" prefWidth="60.0" text="Delete">
                     <graphic>
                         <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../../Photo/unnamed.png" />
                             </image>
                         </ImageView>
-                    </graphic></Button>
-                <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="58.0" prefWidth="52.0" text="Cancel">
+                    </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="56.0" prefWidth="68.0" text="Cancel">
                     <graphic>
                         <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../../Photo/delete-sign--v2.png" />
                             </image>
                         </ImageView>
-                    </graphic></Button>
+                    </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             </children>
         </HBox>
     </top>
