--- a/src/main/resources/Form/SalesmanModule/ReceiptByType.fxml
+++ b/src/main/resources/Form/SalesmanModule/ReceiptByType.fxml
@@ -21,14 +21,17 @@
    <top>
       <HBox prefHeight="48.0" prefWidth="779.0" BorderPane.alignment="CENTER">
          <children>
-            <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#addReceipt" prefHeight="56.0" prefWidth="54.0" text="Save">
+            <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#addReceipt" prefHeight="61.0" prefWidth="58.0" text="Save">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../Photo/save.png" />
                      </image>
                   </ImageView>
-               </graphic></Button>
+               </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="65.0" prefWidth="51.0" text="Edit">
                <graphic>
                   <ImageView fitHeight="36.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
@@ -36,23 +39,32 @@
                         <Image url="@../../Photo/create-new--v1.png" />
                      </image>
                   </ImageView>
-               </graphic></Button>
-            <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="57.0" prefWidth="52.0" text="Delete">
+               </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="64.0" prefWidth="61.0" text="Delete">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../Photo/unnamed.png" />
                      </image>
                   </ImageView>
-               </graphic></Button>
-            <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#clearField" prefHeight="58.0" prefWidth="52.0" text="Cancel">
+               </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#clearField" prefHeight="58.0" prefWidth="60.0" text="Cancel">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../Photo/delete-sign--v2.png" />
                      </image>
                   </ImageView>
-               </graphic></Button>
+               </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             <Button contentDisplay="TOP" layoutX="219.0" layoutY="10.0" mnemonicParsing="false" onAction="#openReceiptManage" prefHeight="56.0" prefWidth="134.0" text="Receipt Manage">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
@@ -61,6 +73,9 @@
                      </image>
                   </ImageView>
                </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
             </Button>
          </children>
       </HBox>
@@ -154,11 +169,17 @@
                      <HBox.margin>
                         <Insets left="30.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
                   </Button>
                   <Button mnemonicParsing="false" onAction="#showAll" text="Show All">
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
                   </Button>
                   <ComboBox fx:id="cbStatus" prefWidth="150.0">
                      <HBox.margin>
@@ -169,6 +190,9 @@
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
                   </Button>
                </children>
             </HBox>
