--- a/src/main/resources/Form/SalesmanModule/SalesManList.fxml
+++ b/src/main/resources/Form/SalesmanModule/SalesManList.fxml
@@ -14,12 +14,12 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="826.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SalesManageModule.SalesManListController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="570.0" prefWidth="895.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SalesManageModule.SalesManListController">
     <center>
       <GridPane prefHeight="79.0" prefWidth="579.0" BorderPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="384.0" minWidth="10.0" prefWidth="201.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="621.0" minWidth="10.0" prefWidth="378.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="384.0" minWidth="10.0" prefWidth="160.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="621.0" minWidth="10.0" prefWidth="469.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -73,7 +73,10 @@
                             <Image url="@../../Photo/save.png" />
                         </image>
                     </ImageView>
-                </graphic></Button>
+                </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#updateSalesMan" prefHeight="65.0" prefWidth="51.0" text="Edit">
                 <graphic>
                     <ImageView fitHeight="36.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
@@ -81,7 +84,10 @@
                             <Image url="@../../Photo/create-new--v1.png" />
                         </image>
                     </ImageView>
-                </graphic></Button>
+                </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#deleteSalesMan" prefHeight="56.0" prefWidth="64.0" text="Delete">
                 <graphic>
                     <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
@@ -89,7 +95,10 @@
                             <Image url="@../../Photo/unnamed.png" />
                         </image>
                     </ImageView>
-                </graphic></Button>
+                </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#cancelAction" prefHeight="56.0" prefWidth="60.0" text="Cancel">
                 <graphic>
                     <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
@@ -97,7 +106,10 @@
                             <Image url="@../../Photo/delete-sign--v2.png" />
                         </image>
                     </ImageView>
-                </graphic></Button>
+                </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             <Button contentDisplay="TOP" layoutX="219.0" layoutY="10.0" mnemonicParsing="false" onAction="#openSellersProductGroup" prefHeight="56.0" prefWidth="134.0" text="Show Group Product">
                <graphic>
                   <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
@@ -106,6 +118,9 @@
                      </image>
                   </ImageView>
                </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
             </Button>
             <Button contentDisplay="TOP" layoutX="271.0" layoutY="10.0" mnemonicParsing="false" onAction="#openSalesmanCustomerList" prefHeight="56.0" prefWidth="134.0" text="Show Customer List">
                <graphic>
@@ -115,8 +130,11 @@
                      </image>
                   </ImageView>
                </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
             </Button>
-            <Button contentDisplay="TOP" layoutX="405.0" layoutY="10.0" mnemonicParsing="false" onAction="#openCommissionSummary" prefHeight="56.0" prefWidth="132.0" text="Commission Manage">
+            <Button contentDisplay="TOP" layoutX="405.0" layoutY="10.0" mnemonicParsing="false" onAction="#openCommissionSummary" prefHeight="56.0" prefWidth="140.0" text="Commission Manage">
                <graphic>
                   <ImageView fitHeight="27.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -124,6 +142,9 @@
                      </image>
                   </ImageView>
                </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
             </Button>
             <Button contentDisplay="TOP" layoutX="539.0" layoutY="10.0" mnemonicParsing="false" onAction="#openCreateOrder" prefHeight="56.0" prefWidth="101.0" text="Create Order">
                <graphic>
@@ -133,8 +154,11 @@
                      </image>
                   </ImageView>
                </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
             </Button>
-            <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openCreateReceipt" prefHeight="59.0" prefWidth="93.0" text="Create Receipt">
+            <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openCreateReceipt" prefHeight="56.0" prefWidth="106.0" text="Create Receipt">
                <graphic>
                   <ImageView fitHeight="27.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -142,6 +166,9 @@
                      </image>
                   </ImageView>
                </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
             </Button>
          </children>
       </HBox>
