--- a/src/main/resources/Form/SalesmanModule/SalesManProductGroup.fxml
+++ b/src/main/resources/Form/SalesmanModule/SalesManProductGroup.fxml
@@ -28,7 +28,10 @@
                                 <Image url="@../../Photo/save.png" />
                             </image>
                         </ImageView>
-                    </graphic></Button>
+                    </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
                 <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="60.0" prefWidth="52.0" text="New">
                     <graphic>
                         <ImageView fitHeight="22.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
@@ -36,31 +39,32 @@
                                 <Image url="@../../Photo/add-icon--ikons-icons--softiconsm-5.png" />
                             </image>
                         </ImageView>
-                    </graphic></Button>
-                <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#updateSellerProGroup" prefHeight="65.0" prefWidth="51.0" text="Edit">
-                    <graphic>
-                        <ImageView fitHeight="36.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../../Photo/create-new--v1.png" />
-                            </image>
-                        </ImageView>
-                    </graphic></Button>
-                <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#deleteSellerProGroup" prefHeight="57.0" prefWidth="52.0" text="Delete">
+                    </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#deleteSellerProGroup" prefHeight="56.0" prefWidth="68.0" text="Delete">
                     <graphic>
                         <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../../Photo/unnamed.png" />
                             </image>
                         </ImageView>
-                    </graphic></Button>
-                <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#cancelAction" prefHeight="58.0" prefWidth="52.0" text="Cancel">
+                    </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#cancelAction" prefHeight="56.0" prefWidth="75.0" text="Cancel">
                     <graphic>
                         <ImageView fitHeight="29.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../../Photo/delete-sign--v2.png" />
                             </image>
                         </ImageView>
-                    </graphic></Button>
+                    </graphic>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             </children>
         </HBox>
     </top>
