--- a/src/main/resources/Form/StatisticModule/CustomerTradeStatistic.fxml
+++ b/src/main/resources/Form/StatisticModule/CustomerTradeStatistic.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="521.0" prefWidth="1106.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.StatisticModule.CustomerTradeStatisticController">
     <right>
@@ -33,6 +34,9 @@
                     <HBox.margin>
                         <Insets left="50.0" top="10.0" />
                     </HBox.margin>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
                 </Button>
             </children>
         </HBox>
